--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "mariadb": "^3.0.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.4"
