--- a/client/.env
+++ b/client/.env
@@ -3,4 +3,4 @@
 # NEXT_PUBLIC_COLOR_FONDO_ALMACEN = #223a3e
 # NEXT_PUBLIC_URL_API = http://192.168.31.192:4030/api/
 # NEXT_PUBLIC_URL_API = http://192.168.0.115:4030/api/
-NEXT_PUBLIC_URL_API=http://0.0.0.0:13033/api/
+NEXT_PUBLIC_URL_API=http://localhost:13033/api/
