--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "react-uuid": "^1.0.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.22.0",
