--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "install": "^0.13.0",
     "next": "12.2.5",
+    "npm": "^8.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-uuid": "^1.0.3",
     "swr": "^1.3.0"
   },
